--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +9,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.notification {
+  color: green;
+  font-size: large;
+  font-weight: bold;
+  background-color: rgb(211, 248, 211);
+  border: 4px green solid;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 15px 0;
+}
+
+.error {
+  color: red;
+  font-size: large;
+  font-weight: bold;
+  background-color: rgb(251, 208, 208);
+  border: 4px red solid;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 15px 0;
 }
